tests/fail/SignedShiftLeft.java
package fail;

import java.lang.System;

public class SignedShiftLeft {
    public static void main(String[] args){
        System.out.println('a' << 3);
    }
}